--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 fullSky_year5_withinMagLimits_noAstromErr.txt
 fullSky_year5_withinMagLimits_withAstromError.txt
+neosim.sublime-project
+neosim.sublime-workspace
+fullsky5year.db
