--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ fullSky_year5_withinMagLimits_withAstromError.txt
 neosim.sublime-project
 neosim.sublime-workspace
 fullsky5year.db
+.ipynb_checkpoints/
