--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@ neosim.sublime-project
 neosim.sublime-workspace
 fullsky5year.db
 .ipynb_checkpoints/
+nightlyOutput_noErr/
+nightlyOutput_withErr/
+obshitOutput_noErr/
+obshitOutput_withErr/
