--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,19 @@ neosim.sublime-project
 neosim.sublime-workspace
 fullsky5year.db
 .ipynb_checkpoints/
-nightlyOutput_noErr/
-nightlyOutput_withErr/
-obshitOutput_noErr/
-obshitOutput_withErr/
+nightly_v0.5_noErr
+obshist_v0.5_noErr
+tracklets_v0.5_noErr
+tracks_v0.5_noErr
+nightly_v2.0_noErr
+obshist_v2.0_noErr
+tracklets_v2.0_noErr
+tracks_v2.0_noErr
+nightly_v0.5_withErr
+obshist_v0.5_withErr
+tracklets_v0.5_withErr
+tracks_v0.5_withErr
+nightly_v2.0_withErr
+obshist_v2.0_withErr
+tracklets_v2.0_withErr
+tracks_v2.0_withErr
