--- a/.gitignore
+++ b/.gitignore
@@ -4,19 +4,15 @@ neosim.sublime-project
 neosim.sublime-workspace
 fullsky5year.db
 .ipynb_checkpoints/
-nightly_v0.5_noErr
-obshist_v0.5_noErr
+nightly_noErr
+obshist_noErr
 tracklets_v0.5_noErr
 tracks_v0.5_noErr
-nightly_v2.0_noErr
-obshist_v2.0_noErr
 tracklets_v2.0_noErr
 tracks_v2.0_noErr
-nightly_v0.5_withErr
-obshist_v0.5_withErr
+nightly_withErr
+obshist_withErr
 tracklets_v0.5_withErr
 tracks_v0.5_withErr
-nightly_v2.0_withErr
-obshist_v2.0_withErr
 tracklets_v2.0_withErr
 tracks_v2.0_withErr
