updated unittest control run

--- a/unittest/controlRun/tracker.yaml
+++ b/unittest/controlRun/tracker.yaml
@@ -61,12 +61,50 @@ _collapsedTrackletsById: [unittest/controlRun/trackletsCollapsed/59580.tracklets
   unittest/controlRun/trackletsCollapsed/59609.tracklets.collapsed.byDiaIds]
 _collapsedTrackletsByIdDir: unittest/controlRun/trackletsCollapsed/
 _collapsedTrackletsDir: unittest/controlRun/trackletsCollapsed/
-_diaSources: [59580.dias, 59581.dias, 59582.dias, 59583.dias, 59584.dias, 59585.dias,
-  59586.dias, 59587.dias, 59588.dias, 59589.dias, 59590.dias, 59591.dias, 59592.dias,
-  59593.dias, 59594.dias, 59595.dias, 59596.dias, 59597.dias, 59598.dias, 59599.dias,
-  59600.dias, 59601.dias, 59602.dias, 59603.dias, 59604.dias, 59605.dias, 59606.dias,
-  59607.dias, 59608.dias, 59609.dias]
-_diaSourcesDir: unittest/nightly/
+_dets: [unittest/controlRun/trackletsByNight/night_59580_through_59595.dets,
+  unittest/controlRun/trackletsByNight/night_59581_through_59596.dets,
+  unittest/controlRun/trackletsByNight/night_59582_through_59597.dets,
+  unittest/controlRun/trackletsByNight/night_59583_through_59598.dets,
+  unittest/controlRun/trackletsByNight/night_59584_through_59599.dets,
+  unittest/controlRun/trackletsByNight/night_59585_through_59600.dets,
+  unittest/controlRun/trackletsByNight/night_59586_through_59601.dets,
+  unittest/controlRun/trackletsByNight/night_59587_through_59602.dets,
+  unittest/controlRun/trackletsByNight/night_59588_through_59603.dets,
+  unittest/controlRun/trackletsByNight/night_59589_through_59604.dets,
+  unittest/controlRun/trackletsByNight/night_59590_through_59605.dets,
+  unittest/controlRun/trackletsByNight/night_59591_through_59606.dets,
+  unittest/controlRun/trackletsByNight/night_59592_through_59607.dets,
+  unittest/controlRun/trackletsByNight/night_59593_through_59608.dets,
+  unittest/controlRun/trackletsByNight/night_59594_through_59609.dets,
+  unittest/controlRun/trackletsByNight/night_59595_through_59609.dets,
+  unittest/controlRun/trackletsByNight/night_59596_through_59609.dets,
+  unittest/controlRun/trackletsByNight/night_59597_through_59609.dets,
+  unittest/controlRun/trackletsByNight/night_59598_through_59609.dets,
+  unittest/controlRun/trackletsByNight/night_59599_through_59609.dets,
+  unittest/controlRun/trackletsByNight/night_59600_through_59609.dets,
+  unittest/controlRun/trackletsByNight/night_59601_through_59609.dets,
+  unittest/controlRun/trackletsByNight/night_59602_through_59609.dets,
+  unittest/controlRun/trackletsByNight/night_59603_through_59609.dets,
+  unittest/controlRun/trackletsByNight/night_59604_through_59609.dets,
+  unittest/controlRun/trackletsByNight/night_59605_through_59609.dets,
+  unittest/controlRun/trackletsByNight/night_59606_through_59609.dets,
+  unittest/controlRun/trackletsByNight/night_59607_through_59609.dets]
+_diasources: [unittest/testData/nightly/59580.dias, unittest/testData/nightly/59581.dias,
+  unittest/testData/nightly/59582.dias, unittest/testData/nightly/59583.dias,
+  unittest/testData/nightly/59584.dias, unittest/testData/nightly/59585.dias,
+  unittest/testData/nightly/59586.dias, unittest/testData/nightly/59587.dias,
+  unittest/testData/nightly/59588.dias, unittest/testData/nightly/59589.dias,
+  unittest/testData/nightly/59590.dias, unittest/testData/nightly/59591.dias,
+  unittest/testData/nightly/59592.dias, unittest/testData/nightly/59593.dias,
+  unittest/testData/nightly/59594.dias, unittest/testData/nightly/59595.dias,
+  unittest/testData/nightly/59596.dias, unittest/testData/nightly/59597.dias,
+  unittest/testData/nightly/59598.dias, unittest/testData/nightly/59599.dias,
+  unittest/testData/nightly/59600.dias, unittest/testData/nightly/59601.dias,
+  unittest/testData/nightly/59602.dias, unittest/testData/nightly/59603.dias,
+  unittest/testData/nightly/59604.dias, unittest/testData/nightly/59605.dias,
+  unittest/testData/nightly/59606.dias, unittest/testData/nightly/59607.dias,
+  unittest/testData/nightly/59608.dias, unittest/testData/nightly/59609.dias]
+_diasourcesDir: unittest/testData/nightly/
 _finalTracklets: [unittest/controlRun/trackletsFinal/59580.tracklets.final,
   unittest/controlRun/trackletsFinal/59581.tracklets.final,
   unittest/controlRun/trackletsFinal/59582.tracklets.final,
@@ -129,6 +167,34 @@ _finalTrackletsById: [unittest/controlRun/trackletsFinal/59580.tracklets.final.b
   unittest/controlRun/trackletsFinal/59609.tracklets.final.byDiaIds]
 _finalTrackletsByIdDir: unittest/controlRun/trackletsFinal/
 _finalTrackletsDir: unittest/controlRun/trackletsFinal/
+_ids: [unittest/controlRun/trackletsByNight/night_59580_through_59595.ids,
+  unittest/controlRun/trackletsByNight/night_59581_through_59596.ids,
+  unittest/controlRun/trackletsByNight/night_59582_through_59597.ids,
+  unittest/controlRun/trackletsByNight/night_59583_through_59598.ids,
+  unittest/controlRun/trackletsByNight/night_59584_through_59599.ids,
+  unittest/controlRun/trackletsByNight/night_59585_through_59600.ids,
+  unittest/controlRun/trackletsByNight/night_59586_through_59601.ids,
+  unittest/controlRun/trackletsByNight/night_59587_through_59602.ids,
+  unittest/controlRun/trackletsByNight/night_59588_through_59603.ids,
+  unittest/controlRun/trackletsByNight/night_59589_through_59604.ids,
+  unittest/controlRun/trackletsByNight/night_59590_through_59605.ids,
+  unittest/controlRun/trackletsByNight/night_59591_through_59606.ids,
+  unittest/controlRun/trackletsByNight/night_59592_through_59607.ids,
+  unittest/controlRun/trackletsByNight/night_59593_through_59608.ids,
+  unittest/controlRun/trackletsByNight/night_59594_through_59609.ids,
+  unittest/controlRun/trackletsByNight/night_59595_through_59609.ids,
+  unittest/controlRun/trackletsByNight/night_59596_through_59609.ids,
+  unittest/controlRun/trackletsByNight/night_59597_through_59609.ids,
+  unittest/controlRun/trackletsByNight/night_59598_through_59609.ids,
+  unittest/controlRun/trackletsByNight/night_59599_through_59609.ids,
+  unittest/controlRun/trackletsByNight/night_59600_through_59609.ids,
+  unittest/controlRun/trackletsByNight/night_59601_through_59609.ids,
+  unittest/controlRun/trackletsByNight/night_59602_through_59609.ids,
+  unittest/controlRun/trackletsByNight/night_59603_through_59609.ids,
+  unittest/controlRun/trackletsByNight/night_59604_through_59609.ids,
+  unittest/controlRun/trackletsByNight/night_59605_through_59609.ids,
+  unittest/controlRun/trackletsByNight/night_59606_through_59609.ids,
+  unittest/controlRun/trackletsByNight/night_59607_through_59609.ids]
 _purifiedTracklets: [unittest/controlRun/trackletsPurified/59580.tracklets.purified,
   unittest/controlRun/trackletsPurified/59581.tracklets.purified,
   unittest/controlRun/trackletsPurified/59582.tracklets.purified,
@@ -199,7 +265,7 @@ _ranLinkTracklets: true
 _ranMakeLinkTrackletsInputByNight: true
 _ranPurifyTracklets: true
 _ranRemoveSubsets: true
-_runDir: unittest/controlRun
+_runDir: unittest/controlRun/
 _tracklets: [unittest/controlRun/tracklets/59580.tracklets,
   unittest/controlRun/tracklets/59581.tracklets, unittest/controlRun/tracklets/59582.tracklets,
   unittest/controlRun/tracklets/59583.tracklets, unittest/controlRun/tracklets/59584.tracklets,
@@ -247,63 +313,7 @@ _trackletsByIndex: [unittest/controlRun/tracklets/59580.tracklets.byIndices,
   unittest/controlRun/tracklets/59608.tracklets.byIndices,
   unittest/controlRun/tracklets/59609.tracklets.byIndices]
 _trackletsByIndexDir: unittest/controlRun/tracklets/
-_trackletsByNightDets: [unittest/controlRun/trackletsByNight/night_59580_through_59595.dets,
-  unittest/controlRun/trackletsByNight/night_59581_through_59596.dets,
-  unittest/controlRun/trackletsByNight/night_59582_through_59597.dets,
-  unittest/controlRun/trackletsByNight/night_59583_through_59598.dets,
-  unittest/controlRun/trackletsByNight/night_59584_through_59599.dets,
-  unittest/controlRun/trackletsByNight/night_59585_through_59600.dets,
-  unittest/controlRun/trackletsByNight/night_59586_through_59601.dets,
-  unittest/controlRun/trackletsByNight/night_59587_through_59602.dets,
-  unittest/controlRun/trackletsByNight/night_59588_through_59603.dets,
-  unittest/controlRun/trackletsByNight/night_59589_through_59604.dets,
-  unittest/controlRun/trackletsByNight/night_59590_through_59605.dets,
-  unittest/controlRun/trackletsByNight/night_59591_through_59606.dets,
-  unittest/controlRun/trackletsByNight/night_59592_through_59607.dets,
-  unittest/controlRun/trackletsByNight/night_59593_through_59608.dets,
-  unittest/controlRun/trackletsByNight/night_59594_through_59609.dets,
-  unittest/controlRun/trackletsByNight/night_59595_through_59609.dets,
-  unittest/controlRun/trackletsByNight/night_59596_through_59609.dets,
-  unittest/controlRun/trackletsByNight/night_59597_through_59609.dets,
-  unittest/controlRun/trackletsByNight/night_59598_through_59609.dets,
-  unittest/controlRun/trackletsByNight/night_59599_through_59609.dets,
-  unittest/controlRun/trackletsByNight/night_59600_through_59609.dets,
-  unittest/controlRun/trackletsByNight/night_59601_through_59609.dets,
-  unittest/controlRun/trackletsByNight/night_59602_through_59609.dets,
-  unittest/controlRun/trackletsByNight/night_59603_through_59609.dets,
-  unittest/controlRun/trackletsByNight/night_59604_through_59609.dets,
-  unittest/controlRun/trackletsByNight/night_59605_through_59609.dets,
-  unittest/controlRun/trackletsByNight/night_59606_through_59609.dets,
-  unittest/controlRun/trackletsByNight/night_59607_through_59609.dets]
 _trackletsByNightDir: unittest/controlRun/trackletsByNight/
-_trackletsByNightIds: [unittest/controlRun/trackletsByNight/night_59580_through_59595.ids,
-  unittest/controlRun/trackletsByNight/night_59581_through_59596.ids,
-  unittest/controlRun/trackletsByNight/night_59582_through_59597.ids,
-  unittest/controlRun/trackletsByNight/night_59583_through_59598.ids,
-  unittest/controlRun/trackletsByNight/night_59584_through_59599.ids,
-  unittest/controlRun/trackletsByNight/night_59585_through_59600.ids,
-  unittest/controlRun/trackletsByNight/night_59586_through_59601.ids,
-  unittest/controlRun/trackletsByNight/night_59587_through_59602.ids,
-  unittest/controlRun/trackletsByNight/night_59588_through_59603.ids,
-  unittest/controlRun/trackletsByNight/night_59589_through_59604.ids,
-  unittest/controlRun/trackletsByNight/night_59590_through_59605.ids,
-  unittest/controlRun/trackletsByNight/night_59591_through_59606.ids,
-  unittest/controlRun/trackletsByNight/night_59592_through_59607.ids,
-  unittest/controlRun/trackletsByNight/night_59593_through_59608.ids,
-  unittest/controlRun/trackletsByNight/night_59594_through_59609.ids,
-  unittest/controlRun/trackletsByNight/night_59595_through_59609.ids,
-  unittest/controlRun/trackletsByNight/night_59596_through_59609.ids,
-  unittest/controlRun/trackletsByNight/night_59597_through_59609.ids,
-  unittest/controlRun/trackletsByNight/night_59598_through_59609.ids,
-  unittest/controlRun/trackletsByNight/night_59599_through_59609.ids,
-  unittest/controlRun/trackletsByNight/night_59600_through_59609.ids,
-  unittest/controlRun/trackletsByNight/night_59601_through_59609.ids,
-  unittest/controlRun/trackletsByNight/night_59602_through_59609.ids,
-  unittest/controlRun/trackletsByNight/night_59603_through_59609.ids,
-  unittest/controlRun/trackletsByNight/night_59604_through_59609.ids,
-  unittest/controlRun/trackletsByNight/night_59605_through_59609.ids,
-  unittest/controlRun/trackletsByNight/night_59606_through_59609.ids,
-  unittest/controlRun/trackletsByNight/night_59607_through_59609.ids]
 _trackletsDir: unittest/controlRun/tracklets/
 _tracks: [unittest/controlRun/tracks/night_59580_through_59595.track,
   unittest/controlRun/tracks/night_59581_through_59596.track,
