Updated .gitignore to reflect recent restructuring

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,2 @@
-__init__.py
-fullSky_year5_withinMagLimits_noAstromErr.txt
-fullSky_year5_withinMagLimits_withAstromError.txt
-neosim.sublime-project
-neosim.sublime-workspace
-fullsky5year.db
-.ipynb_checkpoints/
 *.pyc
-ldm156*/
-debug/*
-_development/
+*.ipynb_checkpoints/
